k8s/overlays/ngrok/ngrok-ingress-auto.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meme-generator-auto
  namespace: meme-generator
spec:
  ingressClassName: ngrok
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meme-generator-frontend
            port:
              number: 80
